# meineDistribution

./: .gitignore  LICENSE  pyproject.toml
src/: README.md
