[project]
name = "meinPaketSCHNEEWEISS"
version = "0.0.1"
authors = [
    { name = "Pia Schneeweiss", email = "pia.schneeweiss@s-l.at" }
]
description = "Stellt Datums- und Zufallsfunktionen zur Verfügung."
keywords = ["Datum", "Zufall"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/SnowyPips/meineDistribution"
